--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "webkid-react-starterkit",
-  "version": "0.3.1",
-  "description": "Lightweight starting point for a react web app.",
+  "name": "my-demo-app",
+  "version": "0.0.1",
+  "description": "Demo react app",
+  "private": true,
   "keywords": [
     "react",
     "starterkit",
@@ -37,12 +38,20 @@
     "jest-cli": "^0.4.0",
     "object-assign": "^2.0.0",
     "react-tools": "^0.13.1",
+    "style-loader": "^0.12.3",
+    "css-loader": "^0.15.6",
+    "less-loader": "^2.2.0",
+    "file-loader": "^0.8.4",
+    "url-loader": "^0.5.6",
     "webpack": "^1.7.3"
   },
   "dependencies": {
     "react": "^0.13.1",
     "react-router": "^0.13.2",
-    "reflux": "^0.2.7"
+    "reflux": "^0.2.7",
+    "bootstrap": "^3.3.5",
+    "font-awesome": "^4.4.0",
+    "bootswatch": "^3.3.5"
   },
   "jest": {
     "scriptPreprocessor": "<rootDir>/node_modules/babel-jest",
