--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "less-loader": "^2.2.0",
     "file-loader": "^0.8.4",
     "url-loader": "^0.5.6",
+    "react-mixin": "^1.7.0",
     "webpack": "^1.7.3"
   },
   "dependencies": {
