--- a/package.json
+++ b/package.json
@@ -47,13 +47,15 @@
     "webpack": "^1.7.3"
   },
   "dependencies": {
+    "bootstrap": "^3.3.5",
+    "bootswatch": "^3.3.5",
+    "font-awesome": "^4.4.0",
+    "leaflet": "^1.0.0-beta.1",
+    "leaflet-label": "^0.2.1-0",
+    "leaflet.label": "leaflet/Leaflet.label",
     "react": "^0.13.1",
     "react-router": "^0.13.2",
-    "reflux": "^0.2.7",
-    "bootstrap": "^3.3.5",
-    "font-awesome": "^4.4.0",
-    "bootswatch": "^3.3.5",
-    "leaflet": "^1.0.0-beta.1"
+    "reflux": "^0.2.7"
   },
   "jest": {
     "scriptPreprocessor": "<rootDir>/node_modules/babel-jest",
