--- a/package.json
+++ b/package.json
@@ -53,7 +53,10 @@
     "leaflet": "^1.0.0-beta.1",
     "leaflet-label": "^0.2.1-0",
     "leaflet.label": "leaflet/Leaflet.label",
+    "lodash": "^3.10.1",
     "react": "^0.13.1",
+    "react-loader": "^1.4.0",
+    "react-picture-show": "^1.3.0",
     "react-router": "^0.13.2",
     "reflux": "^0.2.7"
   },
