--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "babel-core": "^4.7.0",
     "babel-jest": "^4.0.0",
     "babel-loader": "^4.2.0",
+    "css-loader": "^0.15.6",
     "del": "^1.1.1",
+    "file-loader": "^0.8.4",
     "gulp": "^3.8.11",
     "gulp-autoprefixer": "^2.1.0",
     "gulp-concat": "^2.5.2",
@@ -36,14 +38,14 @@
     "gulp-watch": "^4.2.1",
     "gulp-webpack": "^1.3.0",
     "jest-cli": "^0.4.0",
-    "object-assign": "^2.0.0",
-    "react-tools": "^0.13.1",
-    "style-loader": "^0.12.3",
-    "css-loader": "^0.15.6",
     "less-loader": "^2.2.0",
-    "file-loader": "^0.8.4",
-    "url-loader": "^0.5.6",
+    "node-sass": "^3.2.0",
+    "object-assign": "^2.0.0",
     "react-mixin": "^1.7.0",
+    "react-tools": "^0.13.1",
+    "sass-loader": "^2.0.1",
+    "style-loader": "^0.12.3",
+    "url-loader": "^0.5.6",
     "webpack": "^1.7.3"
   },
   "dependencies": {
